# awcloud-token

./: .gitignore  .replit  main.py  pyproject.toml  requirements.txt
static/js/: contoller.js  monitor.js
templates/: index-row.html  index.html  login.html  monitor.html
