[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_awcloud-token"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "*"
cffi = "1.15.0"
cloudscraper = "*"
cryptography = "3.4.7"
grequests = "*"
oathtool = "^2.3.0"
pyotp = "^2.6.0"
python = "^3.8"
pytz = "*"
replit = "*"
requests = "*"
[tool.poetry.dev-dependencies]
